Change company name to Logical Marketing

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KingMarketing - Grow Your Business 10x Faster | Digital Marketing Agency</title>
+    <title>Logical Marketing - Grow Your Business 10x Faster | Digital Marketing Agency</title>
     <meta name="description" content="Leading digital marketing agency helping businesses grow with data-driven strategies. Get 300% more conversions with our proven marketing systems. Free audit available.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
